# Kodiak

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  configure_llm.py  docker-compose.yml  install.sh  main.py  pyproject.toml  test_scan_flow_docker.py  verify_scan_implementation.py
.kiro/specs/core-integration-fixes/: design.md  requirements.md  tasks.md
.kiro/specs/docker-containerization-improvements/: requirements.md
.kiro/specs/frontend-api-key-management/: design.md  requirements.md  tasks.md
.kiro/specs/llm-model-updates/: design.md  requirements.md  tasks.md
.kiro/specs/minimal-working-scan/: design.md  requirements.md  tasks.md
.kiro/specs/production-readiness-suite/: design.md  requirements.md  tasks.md
.kiro/specs/tui-architecture-pivot/: design.md  requirements.md  tasks.md
.kiro/steering/: development.md  implementation.md  product.md  roadmap.md  structure.md  tech.md
backend/: Dockerfile  README.md  main.py  pyproject.toml  task6_implementation_summary.md  task7_implementation_summary.md  test_agent_execution.py  test_attempt_tracking.py  test_configuration_validation.py  test_implementation.py  test_scan_creation_flow.py  test_scan_endpoints.py  test_scan_flow_simple.py  test_task10_simple.py  test_task5_implementation.py  test_websocket_events.py
backend/.hypothesis/examples/04e6b3400353b141/: f7f3c60efbe40125
backend/.hypothesis/tmp/: tmp2ogb5m69
backend/kodiak/api/: api.py  events.py
backend/kodiak/api/endpoints/: approvals.py  graph.py  projects.py  scans.py  system.py  ws.py
backend/kodiak/core/: agent.py  agent_factory.py  config.py  hive_mind.py  orchestrator.py  safety.py
backend/kodiak/core/tools/: base.py  inventory.py
backend/kodiak/core/tools/definitions/: browser.py  discovery.py  exploitation.py  network.py  orchestration.py  osint.py  proxy.py  python_runtime.py  system.py  web.py
backend/kodiak/database/: __init__.py  crud.py  engine.py  models.py
backend/kodiak/services/: browser_instance.py  executor.py  llm.py  websocket_manager.py
backend/kodiak/skills/definitions/frameworks/: django_testing.yaml
backend/kodiak/skills/definitions/vulnerabilities/: command_injection.yaml
backend/tests/: conftest.py  test_asset_discovery_persistence.py  test_event_broadcasting.py  test_tool_execution.py  test_tool_naming_consistency.py
containers/: Dockerfile  docker-entrypoint.sh
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  KEYBOARD_SHORTCUTS.md  SECURITY.md  TUI_GUIDE.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/mission/[id]/: page.tsx
frontend/components/: AgentTree.tsx  HiveGraph.tsx  Terminal.tsx
frontend/lib/: api.ts  useWebSocket.ts
frontend/simple_dashboard/: app.js  index.html  projects.html  style.css
frontend/types/: index.ts
kodiak/: __init__.py  __main__.py  cli.py
kodiak/api/: events.py
kodiak/api/endpoints/: attempts.py  scans.py  skills.py  system.py  ws.py
kodiak/core/: agent.py  config.py  deduplication.py  error_handling.py  orchestrator.py  safety.py
kodiak/core/tools/: inventory.py
kodiak/core/tools/definitions/: discovery.py  exploitation.py  network.py  orchestration.py  system.py  terminal.py  web.py
kodiak/database/: engine.py  models.py
kodiak/services/: executor.py  llm.py
kodiak/skills/: __init__.py  skill_loader.py  skill_registry.py
kodiak/skills/definitions/frameworks/: nodejs_testing.yaml
kodiak/skills/definitions/technologies/: api_testing.yaml  jwt_testing.yaml
kodiak/skills/definitions/vulnerabilities/: sql_injection.yaml  web_application_testing.yaml  xss_detection.yaml
kodiak/tui/: __init__.py  app.py  config_wizard.py  core_bridge.py  events.py  state.py  styles.tcss
kodiak/tui/views/: __init__.py  agent_chat.py  error.py  finding_detail.py  findings.py  graph.py  help.py  home.py  mission_control.py  new_scan.py
kodiak/tui/widgets/: __init__.py  activity_log.py  agent_panel.py  chat_history.py  findings_list.py  graph_tree.py  loading_indicator.py  status_bar.py
powers/gemini-prompt-optimizer/: POWER.md
scripts/: deploy_vps.ps1  verify_hive_mind.py  verify_orchestrator.py
tests/: __init__.py  conftest.py  test_database_model_consistency.py  test_error_handling.py  test_event_broadcasting.py  test_tool_availability.py  test_tool_execution.py  test_tool_naming_consistency.py  test_tool_registration.py
