[tool.poetry]
name = "kodiak-pentest"
version = "0.1.1"
description = "Kodiak - AI-Powered Penetration Testing Suite with Terminal Interface"
authors = ["Kodiak Team <team@kodiak-pentest.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/keethesh/Kodiak"
repository = "https://github.com/keethesh/Kodiak"
documentation = "https://github.com/keethesh/Kodiak/blob/main/README.md"
keywords = [
  "cybersecurity",
  "security", 
  "vulnerability",
  "scanner",
  "pentest",
  "agent",
  "ai",
  "cli",
  "tui",
  "penetration-testing"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators", 
  "Topic :: Security",
  "License :: OSI Approved :: Apache Software License",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
packages = [{include = "kodiak"}]
include = [
  "LICENSE",
  "README.md",
  "kodiak/**/*.tcss",
  "kodiak/**/*.yaml",
  "kodiak/**/*.yml"
]

[tool.poetry.dependencies]
python = "^3.11"
# Core CLI dependencies (always installed)
pydantic = {extras = ["email"], version = "^2.6.0"}
pydantic-settings = "^2.1.0"
litellm = "^1.20.0"
textual = "^0.48.2"
rich = "^13.0.0"
httpx = "^0.26.0"
tenacity = "^8.2.3"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
docker = "^7.0.0"
jinja2 = "^3.1.3"

# Database dependencies (optional for local installs)
sqlalchemy = {version = "^2.0.25", optional = true}
sqlmodel = {version = "^0.0.14", optional = true}
alembic = {version = "^1.13.1", optional = true}
asyncpg = {version = "^0.29.0", optional = true}
psycopg = {extras = ["binary"], version = "^3.1.18", optional = true}
aiosqlite = {version = "^0.19.0", optional = true}

# Web framework dependencies (optional, for API mode)
fastapi = {version = "^0.109.0", optional = true}
uvicorn = {extras = ["standard"], version = "^0.27.0", optional = true}
websockets = {version = "^12.0.0", optional = true}
python-multipart = {version = "^0.0.9", optional = true}
python-jose = {extras = ["cryptography"], version = "^3.3.0", optional = true}
passlib = {extras = ["bcrypt"], version = "^1.7.4", optional = true}

# Browser automation (optional, heavy dependency)
playwright = {version = "^1.40.0", optional = true}

# Monitoring (optional)
sentry-sdk = {version = "^1.40.0", optional = true}

[tool.poetry.extras]
# Full installation with all features (PostgreSQL + all tools)
full = ["sqlalchemy", "sqlmodel", "alembic", "asyncpg", "psycopg", "aiosqlite", "fastapi", "uvicorn", "websockets", "python-multipart", "python-jose", "passlib", "playwright", "sentry-sdk"]
# Local mode: SQLite-based, zero external dependencies
local = ["sqlalchemy", "sqlmodel", "alembic", "aiosqlite"]
# Database support for PostgreSQL persistent storage
database = ["sqlalchemy", "sqlmodel", "alembic", "asyncpg", "psycopg", "aiosqlite"]
# Web browser automation
browser = ["playwright"]
# API server mode
api = ["fastapi", "uvicorn", "websockets", "python-multipart", "python-jose", "passlib"]
# Monitoring and telemetry
monitoring = ["sentry-sdk"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
hypothesis = "^6.98.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.1.15"

[tool.poetry.scripts]
kodiak = "kodiak.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ['py311']
